# crypt-app-rs

./: .gitattributes  .gitignore  Cargo.toml  README.md  compose.yml  dev-start.sh
backend/: Cargo.toml
backend/src/: crypt.rs  lib.rs
docs/: ARCHITECTURE.md
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/: input.css  style.css
frontend/src/composables/: useWebSocket.js
frontend/src/pages/: HomePage.vue  LoginPage.vue
frontend/src/router/: index.js
frontend/src/services/: cryptService.js
frontend/src/stores/: auth.js
frontend/src/utils/: axios.js
nginx/: nginx.conf
services/crypt-gate/: Cargo.toml
services/crypt-gate/src/: main.rs  middleware.rs
services/crypt-processor/: Cargo.toml
services/crypt-processor/src/: error.rs  main.rs
services/jwt-validator/: Cargo.toml
services/key-gate/: Cargo.toml
services/key-gate/src/: main.rs
