[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = { version = "0.8.4", features = ["zeroize"] }
ctr = { version = "0.9.2", features = ["std"] }
rand = "0.8.5"
generic-array = "1.1.1"
rsa = { version = "0.9.7", features = ["pem"] }
base64 = "0.22.1"
hex = "0.4"
sha2 = "0.10"
aes-gcm = "0.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
