[package]
name = "crypt-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
backend = { path = "../../backend" }
tokio = { version = "1.0", features = ["full"] }
lapin = "2.3"
futures-util = "0.3"
tokio-tungstenite = "0.26.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
