[package]
name = "crypt-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
backend = { path = "../../backend" }
actix-web = { version = "4.4.1", features = ["macros"] }
actix-ws = "0.3.0"
tokio = { version = "1.0", features = ["full"] }
lapin = "2.3"
futures-util = "0.3.31"
tokio-tungstenite = "0.26.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
uuid = { version = "1.11.0", features = ["v4"] }
actix-cors = "0.7.0"